src/objects/Advance_Lookup_Principal__c.object
<CustomObject>
    <fields>
        <fullName>Advance_Lookup__c</fullName>
        <label>Advance Lookup</label>
        <referenceTo>Advance_Lookup__c</referenceTo>
        <relationshipLabel>Advance Lookup Principals</relationshipLabel>
        <relationshipName>R00N70000002GTYpEAO</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>CBID__c</fullName>
        <label>CBID</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CBPULLEDDATE__c</fullName>
        <label>CBPULLEDDATE</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>ContactId__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Advance Lookup Principals</relationshipLabel>
        <relationshipName>R00N70000002GTYkEAO</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>MONTHLYPAYMENTSUM__c</fullName>
        <label>MONTHLYPAYMENTSUM</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>PRINCBACTIVEREVACCTS__c</fullName>
        <label>PRINCBACTIVEREVACCTS</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>PRINCBBANKRUPTCY__c</fullName>
        <label>PRINCBBANKRUPTCY</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>PRINCBILACCTSBAL__c</fullName>
        <label>PRINCBILACCTSBAL</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>PRINCBILACCTS__c</fullName>
        <label>PRINCBILACCTS</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>PRINCBMAJORDEROGS__c</fullName>
        <label>PRINCBMAJORDEROGS</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>PRINCBMINORDEROGS__c</fullName>
        <label>PRINCBMINORDEROGS</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>PRINCBREVCREDITAVAIL__c</fullName>
        <label>PRINCBREVCREDITAVAIL</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>PRINCBREVCREDITBAL__c</fullName>
        <label>PRINCBREVCREDITBAL</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>PRINCBREVPAYMENTS__c</fullName>
        <label>PRINCBREVPAYMENTS</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>PRINCBSCORE__c</fullName>
        <label>PRINCBSCORE</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>PRINCBTOTALAMTPASTDUE__c</fullName>
        <label>PRINCBTOTALAMTPASTDUE</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>PRINCREDITBUREAUSCOREAFFECTER__c</fullName>
        <label>PRINCREDITBUREAUSCOREAFFECTER</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PRINCUSTOMERIDTYPE1__c</fullName>
        <label>PRINCUSTOMERIDTYPE1</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PRINCUSTOMERIDTYPE2__c</fullName>
        <label>PRINCUSTOMERIDTYPE2</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PRINEXPERIANSCORE__c</fullName>
        <label>PRINEXPERIANSCORE</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>PRINJOINTSTATEMENT__c</fullName>
        <label>PRINJOINTSTATEMENT</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>PRINSCORINGFACTOR1__c</fullName>
        <label>PRINSCORINGFACTOR1</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PRINSCORINGFACTOR2__c</fullName>
        <label>PRINSCORINGFACTOR2</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PRINSCORINGFACTOR3__c</fullName>
        <label>PRINSCORINGFACTOR3</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PRINSECURITYFRAUDVICTIMVALUES__c</fullName>
        <label>PRINSECURITYFRAUDVICTIMVALUES</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SCORINGFACTOR1EXP__c</fullName>
        <label>SCORINGFACTOR1EXP</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SCORINGFACTOR2EXP__c</fullName>
        <label>SCORINGFACTOR2EXP</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SCORINGFACTOR3EXP__c</fullName>
        <label>SCORINGFACTOR3EXP</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TOTALMONTHLYDEBT__c</fullName>
        <label>TOTALMONTHLYDEBT</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <label>Advance Lookup Principal</label>
    <nameField>
        <label>Advance Lookup Principal Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Advance Lookup Principals</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>